--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 600px;
+    height: 80vh;
     width: 100vw;
 }
 
